--- a/.github/workflows/main_salchipapas.yml
+++ b/.github/workflows/main_salchipapas.yml
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build YourProject.sln --configuration Release # Replace YourProject.sln with your solution file
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish YourProject.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp # Replace YourProject.sln with your solution file
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -40,7 +40,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -61,5 +61,5 @@ jobs:
         with:
           app-name: 'salchipapas'
           slot-name: 'Production'
-          package: .
+          package: ${{env.DOTNET_ROOT}}/myapp # Updated path to where the artifact is published
           
