--- a/.github/workflows/main_salchipapas.yml
+++ b/.github/workflows/main_salchipapas.yml
@@ -22,10 +22,9 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build YourProject.sln --configuration Release # Replace YourProject.sln with your solution file
-
+        run: dotnet build Program.cs --configuration Release 
       - name: dotnet publish
-        run: dotnet publish YourProject.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp # Replace YourProject.sln with your solution file
+        run: dotnet publish Program.cs -c Release -o ${{env.DOTNET_ROOT}}/myapp 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -61,5 +60,5 @@ jobs:
         with:
           app-name: 'salchipapas'
           slot-name: 'Production'
-          package: ${{env.DOTNET_ROOT}}/myapp # Updated path to where the artifact is published
+          package: ${{env.DOTNET_ROOT}}/myapp 
           
